# Self-Custodial-Crypto-Portfolio

./: README.md  config_example.yml  pyproject.toml
archive/block_explorer_apis/: optimism.py  polygon.py  solana.py  wax.py
src/: coingecko.py  main.py  old_main.py
src/block_explorer_apis/: algorand.py  arbitrum.py  bitcoin.py  decred.py  ethereum.py  flux.py
src/portfolio/: colour_logs.py  portfolio.py  request_helper.py  token_objects.py  token_template.py
src/tokens/: ethereum.py  request_helper.py
